# wlroots

./: README.md  meson.build
.builds/: alpine.yml  archlinux.yml  freebsd.yml
.pc/: applied-patches
backend/drm/: atomic.c  backend.c  drm.c  legacy.c  libliftoff.c  meson.build  renderer.c  util.c
backend/wayland/: backend.c  output.c
debian/: changelog  control
debian/patches/: Revert-layer-shell-error-on-0-dimension-without-anchors.patch  render-egl-fix-uninitialized-pointers-in-init_dmabuf_form.patch  seat-pointer-Initialize-low_res_value.patch
examples/: meson.build  output-layers.c  simple.c
include/backend/: wayland.h
include/backend/drm/: drm.h  iface.h
include/render/: drm-writeback.h  pixman.h
include/render/allocator/: gbm.h
include/wlr/interfaces/: wlr_output.h
include/wlr/render/: drm_format_set.h  drm_writeback.h  interface.h  pixman.h  wlr_renderer.h
include/wlr/types/: wlr_drm.h  wlr_linux_dmabuf_v1.h  wlr_output.h
render/: egl.c  meson.build  wlr_renderer.c
render/allocator/: allocator.c  gbm.c  meson.build
render/drm-writeback/: meson.build  pixel_format.c  renderer.c
render/gles2/: renderer.c  texture.c
render/pixman/: renderer.c
types/: meson.build  wlr_compositor.c  wlr_drm.c  wlr_layer_shell_v1.c  wlr_linux_dmabuf_v1.c  wlr_single_pixel_buffer_v1.c
types/output/: output.c
types/xdg_shell/: wlr_xdg_surface.c
